--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-     <title>Hello, world!</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Professional</title>
 </head>
 
 <body>
@@ -18,11 +19,17 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="img/pic1.jpeg" alt="rag1">
+                <img src="img/pic1.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
             </div>
-            <div class="col">col</div>
-            <div class="col">col</div>
-            <div class="col">col</div>
+            <div class="col">
+                <img src="img/pic2.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+            </div>
+            <div class="col">
+                <img src="img/pic3.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+            </div>
+            <div class="col">
+                <img src="img/pic4.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+            </div>
         </div>
     </div>
     
