--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <p>Talent wins games, but teamwork and intelligence win championships<br><span style="color: grey;">- Michael Jordan</span></p>
     </div>
 
-    <div class="container">
+    <div class="container" style="text-align: center;">
         <div class="row">
             <div class="col">
                 <img src="img/pic1.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+                <p style="color: green;">Alessandra Bellone<br><span style="color: grey;">Full Stack Developer</span></p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam laudantium facere ut optio.</p>
             </div>
             <div class="col">
                 <img src="img/pic2.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
