--- a/index.html
+++ b/index.html
@@ -25,12 +25,18 @@
             </div>
             <div class="col">
                 <img src="img/pic2.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+                <p style="color: green;">Muhamad Putera<br><span style="color: grey;">Graphic Designer</span></p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam laudantium facere ut optio.</p>
             </div>
             <div class="col">
                 <img src="img/pic3.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+                <p style="color: green;">Amil Seilsepur<br><span style="color: grey;">Data Analyst</span></p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam laudantium facere ut optio.</p>
             </div>
             <div class="col">
                 <img src="img/pic4.jpeg" alt="rag1" class="img-thumbnail rounded-circle">
+                <p style="color: green;">Jessiza Felicio<br><span style="color: grey;">Front End Developer</span></p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam laudantium facere ut optio.</p>
             </div>
         </div>
     </div>
