--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 
 <body>
+
+    <!-- Testo Top pagina -->
     <div class="container" style="text-align: center;">
         <h1 style="color: green;">Our Experienced & Professional Team</h1>
         <p>Talent wins games, but teamwork and intelligence win championships<br><span style="color: grey;">- Michael Jordan</span></p>
     </div>
 
+    <!-- Contaier con immagini e testo -->
     <div class="container" style="text-align: center;">
         <div class="row">
             <div class="col">
